<resources>
    <string name="app_name">HobbyApplication</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@mail.com</string>
    <string name="menu_map">Map</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="setup_authentication">Setup authentication</string>
    <string name="biometric">Biometric</string>
    <string name="pin">PIN</string>
    <string name="password">Password</string>
    <string name="insert_pin_code">Insert pin code</string>
    <string name="repeat_pin_code">Repeat pin code</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="sign_in">Sign in</string>
    <string name="repeat_password">Repeat password</string>
    <string name="insert_password">Insert password</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="my_cars">My Cars</string>
    <string name="favourite">Favourite</string>
    <string name="fitler">Fitler</string>
    <string name="clear_filter">Clear</string>
    <string name="filter">Filter</string>
</resources>
