<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/setupAuthTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name"
        android:padding="10dp"
        android:scaleType="center"
        android:text="@string/setup_authentication"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/dialog_setauth_radioGroup"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupAuthTextView">

        <RadioButton
            android:id="@+id/dialog_setauth_radio_biometric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biometric" />

        <RadioButton
            android:id="@+id/dialog_setauth_radio_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin" />

        <RadioButton
            android:id="@+id/dialog_setauth_radio_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />
    </RadioGroup>

    <EditText
        android:id="@+id/dialog_setauth_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:ems="10"
        android:hint="@string/insert_pin_code"
        android:inputType="numberPassword"
        android:textColor="@color/colorPrimaryLightText"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_setauth_radioGroup" />

    <EditText
        android:id="@+id/dialog_setauth_pin_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:ems="10"
        android:hint="@string/repeat_pin_code"
        android:inputType="numberPassword"
        android:textColor="@color/colorPrimaryLightText"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_setauth_pin" />

    <EditText
        android:id="@+id/dialog_setauth_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:ems="10"
        android:hint="@string/insert_pin_code"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryLightText"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_setauth_pin_repeat" />

    <EditText
        android:id="@+id/dialog_setauth_password_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:ems="10"
        android:hint="@string/repeat_pin_code"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryLightText"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_setauth_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:weightSum="2"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_setauth_pin_repeat">

        <Button
            android:id="@+id/fragment_settings_dialog_cancel"
            style="@style/InstallationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/fragment_settings_dialog_save"
            style="@style/InstallationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>