<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorDialogBackground">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:scaleType="center"
        android:textAlignment="center"
        android:background="@color/colorPrimary"
        android:text="Insert code"
        android:paddingTop="20dp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="25sp"
        android:contentDescription="@string/app_name" />
    <EditText
        android:id="@+id/dialog_authenticate_pin"
        android:inputType="numberPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryLightText"
        android:drawableEnd="@drawable/ic_vpn_key"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/pin" />
    <EditText
        android:id="@+id/dialog_authenticate_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryLightText"
        android:drawableEnd="@drawable/ic_vpn_key"
        android:visibility="gone"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/password" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_authenticate_signin"
        android:text="@string/sign_in"
        style="@style/InstallationButton"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"/>
</LinearLayout>